--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -95,7 +95,96 @@
 \DeclareMathOperator*{\argmin}{\arg\,\min}  % rbp
 \DeclareMathOperator*{\arginf}{\arg\,\inf}  % rbp
 
-
-
-
 \usepackage{dsfont}
+
+\usepackage{acro}
+
+\DeclareAcronym{mpc}{
+	short=MPC,
+	long=Model Predictive Control,
+}
+
+\DeclareAcronym{uq}{
+	short=UQ,
+	long=uncertainty quantification,
+}
+
+\DeclareAcronym{pqp}{
+	short=pQP,
+	long=parametric quadratic programming,
+}
+
+\DeclareAcronym{qp}{
+	short=QP,
+	long=quadratic programming,
+}
+
+\DeclareAcronym{hvac}{
+	short=HVAC,
+	long={heating, ventilation and  air-conditioning},
+}
+
+\DeclareAcronym{rkhs}{
+	short=RKHS,
+	long=reproducing kernel Hilbert space,
+}
+
+\DeclareAcronym{gp}{
+	short=GP,
+	long=Gaussian processes,
+}
+
+\DeclareAcronym{pwa}{
+	short=PWA,
+	long=piece-wise affine,
+}
+
+\DeclareAcronym{nn}{
+	short=NN,
+	long=neural network,
+}
+
+\DeclareAcronym{dnn}{
+	short=DNN,
+	long=deep neural network,
+}
+
+\DeclareAcronym{mpt}{
+	short=MPT,
+	long=multi-parametric toolbox,
+}
+
+\DeclareAcronym{pd}{
+	short=PD,
+	long=positive-definite,
+}
+
+\DeclareAcronym{spd}{
+	short=SPD,
+	long=strictly positive-definite,
+}
+
+\DeclareAcronym{hs}{
+	short=HS,
+	long=hypothesis space,
+}
+
+\DeclareAcronym{gts}{
+	short=GTS,
+	long=ground-truth space,
+}
+
+\DeclareAcronym{ahu}{
+	short=AHU,
+	long={air-handling unit},
+}
+
+\DeclareAcronym{ai}{
+	short=AI,
+	long=artificial intelligence,
+}
+
+\DeclareAcronym{ml}{
+	short=ML,
+	long=machine learning,
+}
