--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -43,11 +43,14 @@
  \listoftables
 % your list of symbols here, if needed.
 
+\cleardoublepage
+\phantomsection
+\addcontentsline{toc}{chapter}{Acronyms} % adds an entry to the table of contents
+\printacronyms
 
 % space before each new paragraph according to the template guidelines.
 %(needs to be after titlepage and frontmatter to keep the table of contents lists short)
 \setlength{\parskip}{1em}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% MAIN: The chapters of the thesis
