--- a/tail/appendix.tex
+++ b/tail/appendix.tex
@@ -200,22 +200,20 @@ The concept of a Hamel basis is aligned with the more specific concept of a ``ba
 	and it is usually denoted as $\text{Proj}_P(x)$.
 \end{definition}
 
+%\mycomment{Perhaps explain the difference between SUP and MAX, INF and MIN. }
 
 
-\mycomment{Perhaps explain the difference between SUP and MAX, INF and MIN. }
-
-
-
-\chapter{Properties of kernels}
-
-Let $k$, $k_1$ and $k_2$ be PD kernels (Definition~\ref{def.pd_kernel}) defined on $\Omega \times \Omega$, $\Omega \subseteq \mathbb{R}^n$. Let $\alpha \geq 0$ be an arbitrary positive scalar. We have that the new function $k^\star$ as defined by any of the following constructions is also a PD kernel
-\begin{align}
-	& k^\star(x,x') := \alpha k(x,x') \\
-	& k^\star(x,x') := k_1(x,x') + k_2(x,x') \\
-	& k^\star(x,x') := k_1(x,x') k_2(x,x') 
-\end{align}
-
-\begin{my_proof}
-	For the first three cases, see \cite[§4]{steinwart2008svm_book}.
-\end{my_proof}
-
+%
+%\chapter{Properties of kernels}
+%
+%Let $k$, $k_1$ and $k_2$ be PD kernels (Definition~\ref{def.pd_kernel}) defined on $\Omega \times \Omega$, $\Omega \subseteq \mathbb{R}^n$. Let $\alpha \geq 0$ be an arbitrary positive scalar. We have that the new function $k^\star$ as defined by any of the following constructions is also a PD kernel
+%\begin{align}
+%	& k^\star(x,x') := \alpha k(x,x') \\
+%	& k^\star(x,x') := k_1(x,x') + k_2(x,x') \\
+%	& k^\star(x,x') := k_1(x,x') k_2(x,x') 
+%\end{align}
+%
+%\begin{my_proof}
+%	For the first three cases, see \cite[§4]{steinwart2008svm_book}.
+%\end{my_proof}
+%
