--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -210,7 +210,7 @@
 	publisher={Nature Publishing Group}
 }
 
-@Online{Chui2022,
+@misc{Chui2022,
 	author = {Michael Chui and Roger Roberts and Lareina Yee},
 	year = {2022},
 	title = {{Generative AI is here: How tools like ChatGPT could change your business}},
@@ -218,7 +218,16 @@
 	urldate = {2023-01-31}
 }
 
-@Online{Bechtel2022,
+
+@misc{hale2019,
+	author = {James Hale},
+	year = {2019}, 	
+	title = {More Than 500 Hours Of Content Are Now Being Uploaded To {YouTube} Every Minute},
+	url = {https://www.tubefilter.com/2019/05/07/number-hours-video-uploaded-to-youtube-per-minute/},
+	urldate = {2023-01-31}
+}
+
+@misc{Bechtel2022,
 	author = {Mike Bechtel},
 	year = {2022},
 	title = {{Opening up to AI: Learning to trust our AI colleagues}},
@@ -234,6 +243,73 @@
 	year={2017},
 	organization={IEEE}
 }
+
+@book{zhou1998essentials,
+	title={Essentials of robust control},
+	author={Zhou, Kemin and Doyle, John Comstock},
+	volume={104},
+	year={1998},
+	publisher={Prentice hall Upper Saddle River, NJ}
+}
+
+@article{pan2010survey,
+	title={A survey on transfer learning},
+	author={Pan, Sinno Jialin and Yang, Qiang},
+	journal={IEEE Transactions on knowledge and data engineering},
+	volume={22},
+	number={10},
+	pages={1345--1359},
+	year={2010},
+	publisher={IEEE}
+}
+
+@article{di2022physically,
+	title={Physically consistent neural networks for building thermal modeling: theory and analysis},
+	author={Di Natale, Loris and Svetozarevic, Bratislav and Heer, Philipp and Jones, Colin N},
+	journal={Applied Energy},
+	volume={325},
+	pages={119806},
+	year={2022},
+	publisher={Elsevier}
+}
+
+@article{galimberti2021hamiltonian,
+	title={Hamiltonian deep neural networks guaranteeing non-vanishing gradients by design},
+	author={Galimberti, Clara Luc{\'\i}a and Furieri, Luca and Xu, Liang and Ferrari-Trecate, Giancarlo},
+	journal={arXiv preprint arXiv:2105.13205},
+	year={2021}
+}
+
+@article{hewing2020learning,
+	title={Learning-based model predictive control: Toward safe learning in control},
+	author={Hewing, Lukas and Wabersich, Kim P and Menner, Marcel and Zeilinger, Melanie N},
+	journal={Annual Review of Control, Robotics, and Autonomous Systems},
+	volume={3},
+	pages={269--296},
+	year={2020},
+	publisher={Annual Reviews}
+}
+
+@article{brunke2022safe,
+	title={Safe learning in robotics: From learning-based control to safe reinforcement learning},
+	author={Brunke, Lukas and Greeff, Melissa and Hall, Adam W and Yuan, Zhaocong and Zhou, Siqi and Panerati, Jacopo and Schoellig, Angela P},
+	journal={Annual Review of Control, Robotics, and Autonomous Systems},
+	volume={5},
+	pages={411--444},
+	year={2022},
+	publisher={Annual Reviews}
+}
+
+
+@inproceedings{chakrabarty2022optimizing,
+	title={Optimizing Closed-Loop Performance with Data from Similar Systems: A Bayesian Meta-Learning Approach},
+	author={Chakrabarty, Ankush},
+	booktitle={2022 IEEE 61st Conference on Decision and Control (CDC)},
+	pages={130--136},
+	year={2022},
+	organization={IEEE}
+}
+
 
 
 @inproceedings{maddalena2021kpc,
