--- a/main/chap1_introduction.tex
+++ b/main/chap1_introduction.tex
@@ -2,47 +2,79 @@
 \chapter{Introduction}
 \markboth{Introduction}{Introduction}
 
-Artificial intelligence (AI) and machine learning (ML) are on the rise. Both terms, often used interchangeably, are nowadays an integral part of the popular culture, being referenced in various shows, movies, and books written by laymen. Recent AI milestones that endorse the idea that important progress is being made include the 2016 AlphaGo's victory agains a 9-dan Go player in a 5-game match \citep{silver2016mastering}, and the OpenAI generative models DALL$\cdot$E and ChatGPT, which showcased impressive performance and drew the attention of the general population. On the business-side of the spectrum, companies are also trying to leverage the power of AI and ML to automate tasks, optimize processes and enhance productivity \citep{Chui2022}. Indeed, both AI and ML are often referred to by consulting firms as disruptive technologies whose potential is yet to be fully explored \citep{Bechtel2022}. These advances and excitement are generally associated with two central driving factors: the development of more sophisticated algorithms and the ever-growing availability of data.
+\section{The general context}
 
-Contrast the main success stories of AI or RL with engineering fields. Funnel down to automatic control.
+\Ac{ai} and \ac{ml} are on the rise. Both terms, often used interchangeably, are nowadays an integral part of the popular culture, being referenced in various shows, movies, and books written by laymen. Recent AI milestones that endorse the idea that important progress is being made include the 2016 AlphaGo's victory agains a 9-dan Go player \citep{silver2016mastering}, and the OpenAI generative models DALL$\cdot$E and ChatGPT, which showcased impressive performance and drew the attention of the general population. On the business-side of the spectrum, companies are also trying to leverage the power of \ac{ai} and \ac{ml} to automate tasks, optimize processes and enhance productivity \citep{Chui2022}. Indeed, both \ac{ai} and \ac{ml} are often referred to by consulting firms as disruptive technologies whose potential is yet to be fully explored \citep{Bechtel2022}. These advances and excitement are generally associated with two main driving factors: the development of more sophisticated algorithms and the ever-growing availability of data. Unfortunately, this is not equally true in all application domains.
 
-Point out the lack of experimental investigations for some of the techniques.
+Data is indeed abundant and even freely accessible when one needs to build an image classification model or a natural language processing algorithm. According to 2019 YouTube statistics, over 500 hours of videos are uploaded to the platform every minute \citep{hale2019}.  
+%Other forms of data such as insurance records are logged by companies but are not shared with others due to their economic relevance and sensible nature. 
+In the domain of automatic control, data is not as pervasive for the reasons highlighted next.
+%tends to be more scarce due to different issues. 
+First, control systems platforms, especially low-level ones, are typically not designed to store historical information and repeatedly replace old samples with more recent ones. Picture for instance microcontroller and FPGA boards, which only feature small memory blocks and are not always designed to export operational data to remote computers in real-time. Additionally, whereas in the field of games the \textit{context} that influences how an environment evolves in time is well-understood and sometimes completely recorded, in engineering systems it is most often not completely known and certainly not fully measured. In effect, robust control tools usually do not require access to disturbance values, or are fed estimates \citep{zhou1998essentials,pannocchia2015offset}. Lastly, the tasks that need to be learned in controls are more specific and dependent on the particular instance of the problem at hand. For example, an \ac{ml} developer can teach a neural network how to tell cars from other objects while using pictures of a Volkswagen Kombi and a Lamborghini Aventador, but an automotive engineer would have a hard time teaching his model how to drive if data coming from both vehicles were mixed\footnote{In transfer learning \citep{pan2010survey}, one uses data coming from a certain task to identify patterns that will be useful in a similar, but not identical task.}.  For these three reasons, it is often hard for control engineers to gather larges batches of high-quality, informative data.
 
-Discuss robust analysis and control, and talk about ml algos.
+Aside from the issue of data availability, some algorithms are not suited for automatic control. Many ML application domains only involve off-line decision making with no stringent time constraints associated to them. The decisions made also do not normally affect the next inputs that the algorithm will receive, i.e., no closed-loop interactions are present (the prominent exception is reinforcement learning). ML algorithms are consequently devised without particular consideration for those aspects. Researchers have been trying to adapt certain models, making them more suited to describing engineering systems. One such line of investigation deals with incorporating physical knowledge into classical models \citep{galimberti2021hamiltonian,di2022physically} with the hopes of attaining a more predictable behavior and, above all, system-level guarantees. Safety is another major concern \citep{hewing2020learning,brunke2022safe}. Since bad actuation frequently leads to causing materialistic or financial damage, if not human in the worst case, algorithms have to be predictable and comply with certain rules. In statistical learning, uncertainties are quantified and can be later used to establish safety guarantees as shown for example in \cite{hewing2019cautious} and \cite{lederer2022cooperative}. Nevertheless, these typically come in probabilistic forms, in contrast with hard properties that are independent of the uncertainty realizations and to which some control practitioners are used to. Algorithms for which robust guarantees can be derived are way less common than probabilistic ones. Examples include \cite{milanese2004set,sabug2021smgo}, where only mild assumptions are posed on the phenomenon to be learned and, yet, hard guarantees are attained.
 
-Identify the gap in the literature.
+Success stories involving ML in control science of course exist and they can be found in the fields of industrial mechatronics \citep{khosravi2022safety}, building climate control \citep{lian2021adaptive} and autonomous racing \citep{hewing2019cautious} to list a few. This thesis aims at strengthening this body of literature, corroborating the idea that ML can lend itself to controls and bring important value to the field. We contribute by proposing a new algorithm that can be utilized for data-driven robust analysis and control, an experimental investigation of a promising ML technique, and a novel neural network architecture that can be used to scale-down the computational requirements of a well-known optimization-based control law.
 
+%In short, there are fields in which the information needed to train hungry algorithms cannot be easily obtained or is costly to acquire. 
 
-\section{Outline and Contribution}
+%Contrast the main success stories of AI or RL with engineering fields. Funnel down to automatic control.
 
-\section{Publications}
+%Point out the lack of experimental investigations for some of the techniques.
 
-The subsequent chapters of this dissertation were based on the following publications:
+%Discuss robust analysis and control, and talk about ml algos.
+
+\section{Outline and contributions}
+
+The core of this dissertation is divided into three chapters, each with its own conclusions and envisioned future investigations. A brief description and the contributions made in each of them are outlined as follows.
+
+%\vspace{-10pt}
+\paragraph{Chapter~2: Safely learning with kernels}. 
+
+In this part we investigate the problem of robust uncertainty quantification, where \textit{hard bounds} are be established for the values of an unknown function at unobserved locations. As opposed to other works found in the literature, our novel approach explores kernels, conferring on it a high degree of representation power. Another distinguishing feature is the presence of a bounded measurement noise model with no distributional assumptions imposed on it. Different versions of the bounds are presented, involving either the solution of convex optimization problems, or closed-form expressions. Finally, examples are presented to illustrate their applicability in a number of different scenarios, including robust analysis and control problems. The contents of this part are based on the following works:
+\begin{itemize}
+	\item P. Scharnhorst, E. T. Maddalena, Y. Jiang, and C. N. Jones. ``Robust Uncertainty Bounds in Reproducing Kernel Hilbert Spaces: A Convex Optimization Approach." IEEE Transactions on Automatic Control -- Early Access (2022).
+	
+	\item E. T. Maddalena, P. Scharnhorst, and C. N. Jones. ``Deterministic error bounds for kernel-based learning techniques under bounded noise." Automatica 134 (2021): 109896.
+		
+	\item E. T. Maddalena, P. Scharnhorst, Y. Jiang, and C. N. Jones. ``KPC: Learning-based model predictive control with deterministic guarantees." Learning for Dynamics and Control. PMLR, 2021.
+\end{itemize}
+
+\paragraph{Chapter~3: Building temperature control through Gaussian process and Model Predictive Control}.
+
+In this chapter an experimental investigation involving Gaussian process dynamical models and \ac{mpc} is reported. The techniques were combined to tackle the control of an industrial hospital cooling system for three adjacent rooms. To the best of our knowledge, no other similar investigation exists in the literature at present, validating the use of \ac{gp} models in a multi-zone building control problem. Aside from detailing the developed project, we also contrast the approach to alternative methodologies with the aid of simulations, helping us understand how close each of them are to an ideal solution. The papers listed next are the ones more closely related to this part: 
 
 \begin{itemize}
-	\item E. T. Maddalena, Y. Lian, and C. N. Jones. ``Data-driven methods for building control—A review and promising future directions." Control Engineering Practice 95 (2020): 104211.
+	\item Di Natale, L., Lian, Y., Maddalena, E. T., Shi, J., and Jones, C. N. (2022). ``Lessons Learned from Data-Driven Building Control Experiments: Contrasting Gaussian Process-based MPC, Bilevel DeePC, and Deep Reinforcement Learning". In 2022 IEEE 61st Conference on Decision and Control (pp. 1111-1117). 
 	
-	\item E.T. Maddalena, P. Scharnhorst, and C. N. Jones. ``Deterministic error bounds for kernel-based learning techniques under bounded noise." Automatica 134 (2021): 109896.
+	\item Maddalena, E. T., Müller, S. A., dos Santos, R. M., Salzmann, C., Jones, C. N. (2022). ``Experimental Data-Driven Model Predictive Control of a Hospital HVAC System During Regular Use." Energy and Buildings: 112316.
 	
-	\item P. Scharnhorst, E.T. Maddalena, Y. Jiang, and C. N. Jones. ``Robust Uncertainty Bounds in Reproducing Kernel Hilbert Spaces: A Convex Optimization Approach." arXiv.
-	
-	\item E. T. Maddalena, P. Scharnhorst, Y. Jiang, and C. N. Jones. ``KPC: Learning-based model predictive control with deterministic guarantees." Learning for Dynamics and Control. PMLR, 2021.
-
-	\item E. T. Maddalena, S. A. Müller, R. M. dos Santos, C. Salzmann, C. N. Jones. ``Experimental Data-Driven Model Predictive Control of a Hospital HVAC System During Regular Use." Energy and Buildings: 112316 (2022).
-	
+	\item Maddalena, E. T., Lian, Y., Jones, C. N. (2020). ``Data-driven methods for building control—A review and promising future directions." Control Engineering Practice 95: 104211.
 \end{itemize}
 
-Works developed during the course of this PhD that are not discussed herein include:
+\paragraph{Chapter~4: Learing MPC controllers with pQP neural networks}.
+
+Instead of employing \acp{nn} to learn unknown relationships from data, in this chapter we utilize them to approximate a function that in principle can be computed in closed-form. The intention is that of attaining a simplified representation that can be more easily evaluated in real-time. More concretely, we propose a network architecture to learn \ac{mpc} controllers from state-control samples that has two main advantages over competing strategies: it is shown to be capable of representing any linear \ac{mpc} formulation, and the \ac{nn} can be converted into a piece-wise affine format, similar to explicit \ac{mpc}. Two examples, one in simulations and one experimental, are given to showcase the effectiveness of the technique in reducing the \ac{mpc} computational burden with little impact on performance. The papers below are the texts from which most of the material was extracted:
+
+\begin{itemize}
+	\item Maddalena, E. T., Moraes, C. G. da S., Waltrich, G., Jones, C. N. (2020). ``A neural network architecture to learn explicit MPC controllers from data". IFAC-PapersOnLine 53 (2), 11362-11367. 
+	
+	\item Maddalena, E. T., Specq, M. W. F., Wisniewski, V. L., Jones, C. N. (2021). ``Embedded PWM predictive control of DC-DC power converters via piecewise-affine neural networks." IEEE Open Journal of the Industrial Electronics Society 2, 199-206.
+\end{itemize}
+
+
+A number of additional papers were written during the course of this PhD, but are not discussed in this thesis due to their being off-topic:
 
 \begin{itemize}	
-	\item F-X Chalet, T. Bujaroska, E. Germeni, N. Ghandri, E. T. Maddalena, K. Modi, A. Olopoenia, J. Thompson, M. Togninalli and A. H. Briggs. ``Mapping the Insomnia Severity Index Instrument to EQ‑5D Health State Utilities: A United Kingdom Perspective." PharmacoEconomics - Open (2023).
+	\item Chalet, F.-X., Bujaroska,  T., Germeni, E., Ghandri, N., Maddalena, E. T., Modi, K., Olopoenia, A., Thompson, J., Togninalli, M., Briggs, A. H. (2023). ``Mapping the Insomnia Severity Index Instrument to EQ‑5D Health State Utilities: A United Kingdom Perspective." PharmacoEconomics - Open.
 	
-	\item U. Rosolia, Y. Lian, E. T. Maddalena, G. Ferrari-Trecate, and C. N. Jones ``On the Optimality and Convergence Properties of the Iterative Learning Model Predictive Controller." IEEE Transactions on Automatic Control 68.1 (2022): 556-563.	
+	\item Rosolia, U., Lian, Y., Maddalena, E. T., Ferrari-Trecate, G., Jones, C. N. (2022). ``On the Optimality and Convergence Properties of the Iterative Learning Model Predictive Controller." IEEE Transactions on Automatic Control 68.1: 556-563.	
 	
-	\item W. Xu, Y. Jiang, E. T. Maddalena and C. N. Jones. ``Lower bounds on the worst-case complexity of efficient global optimization." arXiv preprint arXiv:2209.09655 (2022).
+	\item Xu, W., Jiang, Y., Maddalena, E. T., Jones, C. N. (2022). ``Lower bounds on the worst-case complexity of efficient global optimization." arXiv preprint arXiv:2209.09655.
 		
-	\item A. Chakrabarty, E. T. Maddalena, H. Qiao, and C. Laughman. ``Scalable Bayesian optimization for model calibration: Case study on coupled building and HVAC dynamics." Energy and Buildings (2021) 253, 111460
+	\item Chakrabarty, A., Maddalena, E. T., Qiao, H., Laughman, C. (2021). ``Scalable Bayesian optimization for model calibration: Case study on coupled building and HVAC dynamics." Energy and Buildings 253, 111460
 	
-	\item E.T. Maddalena, and C. N. Jones. ``NSM converges to a k-NN regressor under loose Lipschitz estimates." IEEE Control Systems Letters  134 (2020): 880-885.
-		
+	\item Maddalena, E. T., Jones, C. N. (2020). ``NSM converges to a k-NN regressor under loose Lipschitz estimates." IEEE Control Systems Letters  134: 880-885.
 \end{itemize}
+
+Whether their are covered in this document or not, all works developed throughout the past years were the result of fruitful collaborations with different scientists. Any credit for the contributions is therefore to be shared among us.
