--- a/main/chap3_gaussian_processes.tex
+++ b/main/chap3_gaussian_processes.tex
@@ -108,25 +108,25 @@ The building considered in this study was a surgery center situated in the São 
 	\label{fig.facadeAndRooms}
 \end{figure}
 
-A forced-air cooling plant is in place to provide the occupants with a suitable indoor climate in accordance with local regulations. A total of seven air-handling units (AHUs) collect outdoor air that is then treated and filtered before being pumped into the several indoor spaces. We had control only over three AHUs, one for each aforementioned thermal zone. A central chiller connected to an external cooling tower provides chilled water to all AHUs, which in turn feature three-way valves to control the flow of water through their cooling coils. The AHU fans are operated always at constant speed, resulting in a constant volumetric flow through the air-ducts and into the zones. As per the regulations, no air recycling is possible and all return air is directly discharged into the atmosphere. As the temperature in Campo Grande is typically high, the HVAC system was conceived to only cool the space, not having the means to provide positive thermal energy (for more details, see Section~\ref{sec.controlProb}).
+A forced-air cooling plant is in place to provide the occupants with a suitable indoor climate in accordance with local regulations. A total of seven \acp{ahu} collect outdoor air that is then treated and filtered before being pumped into the several indoor spaces. We had control only over three \acp{ahu}, one for each aforementioned thermal zone. A central chiller connected to an external cooling tower provides chilled water to all \acp{ahu}, which in turn feature three-way valves to control the flow of water through their cooling coils. The \ac{ahu} fans are operated always at constant speed, resulting in a constant volumetric flow through the air-ducts and into the zones. As per the regulations, no air recycling is possible and all return air is directly discharged into the atmosphere. As the temperature in Campo Grande is typically high, the \ac{hvac} system was conceived to only cool the space, not having the means to provide positive thermal energy (for more details, see Section~\ref{sec.controlProb}).
 
 \begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.75\linewidth]{../images/chap3_ahus_b.jpg} \\[8pt]
 	\includegraphics[width=0.75\linewidth]{../images/chap3_ahus_a.jpg} 
-	\caption{Photos of the AHU room where one can identify the air ducts (top), the supply and return water pipes (top and bottom), and one of the three-way valve servomotors that control the flow of chilled water (bottom).}
+	\caption{Photos of the \ac{ahu} room where one can identify the air ducts (top), the supply and return water pipes (top and bottom), and one of the three-way valve servomotors that control the flow of chilled water (bottom).}
 	\label{fig.ahuRoom}
 \end{figure}
 
-Two distinct sensor networks were deployed to monitor the HVAC plant and the indoor spaces. Firstly, we will describe the one located in the AHU room. One local controller (LCO)--a National Instruments myRIO--was attached to each air-handling unit to read all sensors and monitor the AHUs: supply and return water temperature probes, a water flow meter, an anemometer, as well as an angular position sensor. The LCOs were moreover responsible for running low-level signal processing routines and implementing control actions, i.e., acting on the three-way valve servomotor to change the chilled water flow, hence influencing the supply air temperature. Photos of the AHU room are shown in Figure~\ref{fig.ahuRoom}. Next, in order to measure the indoor temperatures in a flexible way, a wireless network of Z-wave sensors was set up in the operating rooms and waiting room. These were equipped with external temperature probes (Dallas DS18B20) to guarantee fast and precise readings, reporting their measurements periodically to a local computer (LC) that featured a Z-wave transceiver attached to it.
+Two distinct sensor networks were deployed to monitor the \ac{hvac} plant and the indoor spaces. Firstly, we will describe the one located in the \ac{ahu} room. One local controller (LCO)--a National Instruments myRIO--was attached to each air-handling unit to read all sensors and monitor the \acp{ahu}: supply and return water temperature probes, a water flow meter, an anemometer, as well as an angular position sensor. The LCOs were moreover responsible for running low-level signal processing routines and implementing control actions, i.e., acting on the three-way valve servomotor to change the chilled water flow, hence influencing the supply air temperature. Photos of the \ac{ahu} room are shown in Figure~\ref{fig.ahuRoom}. Next, in order to measure the indoor temperatures in a flexible way, a wireless network of Z-wave sensors was set up in the operating rooms and waiting room. These were equipped with external temperature probes (Dallas DS18B20) to guarantee fast and precise readings, reporting their measurements periodically to a local computer (LC) that featured a Z-wave transceiver attached to it.
 
 %They periodically report they samples to a 2.66~GHz Mac Mini equipped with a Z-wave USB transceiver that was installed in the waiting room. This local computer (LC) acted as the main computing platform for the project, gathering data from all sources, hosting a local database, and running all the real-time optimization algorithms.
-The LC was a 3~GHz, 16 GB RAM, core i7 machine installed in the waiting room and acting as the main computer platform for the project. This computer and the AHU LCOs were all connected to a local area network (LAN) to exchange information, which was done by using the UDP protocol at a rate of 1~Hz. We highlight that this same LAN was used to send control signals from the LC to the LCOs in order to modulate the AHU valves. Lastly, a weather station was deployed on site to measure the outdoor temperature and the solar radiation acting on the building with high accuracy. All signals were sampled with a period of two minutes and stored into a local time-series database, InfluxDB. A block-diagram of the complete system is depicted in Figure~\ref{fig.blockDiagram}.  
+The LC was a 3~GHz, 16 GB RAM, core i7 machine installed in the waiting room and acting as the main computer platform for the project. This computer and the \ac{ahu} LCOs were all connected to a local area network (LAN) to exchange information, which was done by using the UDP protocol at a rate of 1~Hz. We highlight that this same LAN was used to send control signals from the LC to the LCOs in order to modulate the \ac{ahu} valves. Lastly, a weather station was deployed on site to measure the outdoor temperature and the solar radiation acting on the building with high accuracy. All signals were sampled with a period of two minutes and stored into a local time-series database, InfluxDB. A block-diagram of the complete system is depicted in Figure~\ref{fig.blockDiagram}.  
 
 \begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.75\linewidth]{../images/chap3_sys_arch_diagram.pdf}
-	\caption{The overall system architecture, including the three air-handling units (AHUs) and their local controllers (LCOs). Information is exchanged between the LCOs and the local computer (LC) through a local area network (LAN).}
+	\caption{The overall system architecture, including the three \acp{ahu} and their local controllers (LCOs). Information is exchanged between the LCOs and the local computer (LC) through a local area network (LAN).}
 	\label{fig.blockDiagram}
 \end{figure}
 
@@ -135,10 +135,10 @@ The LC was a 3~GHz, 16 GB RAM, core i7 machine installed in the waiting room and
 
 The control goal was to regulate the indoor temperature within the three zones ($T_i$, $i=1,2,3$), keeping it below a pre-specified value $T_{\text{max}}$ at all times. Although defining two-level temperature envelopes that have relaxed constraints at night is common for residences and offices, some employees still made use of the surgery center spaces during nighttime and, thus, the indoor temperature has to stay below $T_{\text{max}}$ even then. Furthermore, this was to be done while minimizing the chiller energy consumption, which is a function of its coefficient of performance (COP) curve and the building thermal load. 
 
-The controlled variables are the angular positions of each AHU three-way valve ($\theta_i$, $i=1,2,3$) that regulate the flow of water across their cooling coils. Naturally, these quantities are physically limited between a minimum $\theta_\text{min}$ and a maximum value $\theta_\text{max}$. Several disturbances both of internal and external nature act on the system. The measured ones include the outdoor temperature $T_\text{out}$, the solar radiation $R_\text{sol}$, and the temperature of the water supplied by the chiller to the AHUs, $T_\text{sup}$. The variables $T_\text{out}$ and $R_\text{sol}$ directly affect the indoor climate by heating the external walls. Also, both $T_\text{out}$ and $T_\text{sup}$ can be regarded as input disturbances; indeed, these quantities define the HVAC system actuation capabilities along with the valve positions $\theta_i$. The unmeasured disturbances are the internal heat gains generated by occupants and equipment, as well as the eventual opening and closing of doors that lead to air mix among rooms. A summary of the relevant control information described here can be found in Table~\ref{tab.controlInformation}.
+The controlled variables are the angular positions of each \ac{ahu} three-way valve ($\theta_i$, $i=1,2,3$) that regulate the flow of water across their cooling coils. Naturally, these quantities are physically limited between a minimum $\theta_\text{min}$ and a maximum value $\theta_\text{max}$. Several disturbances both of internal and external nature act on the system. The measured ones include the outdoor temperature $T_\text{out}$, the solar radiation $R_\text{sol}$, and the temperature of the water supplied by the chiller to the \acp{ahu}, $T_\text{sup}$. The variables $T_\text{out}$ and $R_\text{sol}$ directly affect the indoor climate by heating the external walls. Also, both $T_\text{out}$ and $T_\text{sup}$ can be regarded as input disturbances; indeed, these quantities define the \ac{hvac} system actuation capabilities along with the valve positions $\theta_i$. The unmeasured disturbances are the internal heat gains generated by occupants and equipment, as well as the eventual opening and closing of doors that lead to air mix among rooms. A summary of the relevant control information described here can be found in Table~\ref{tab.controlInformation}.
 
 
-In order to operate optimally the industrial cooling system while minimizing the operational costs, we opted for designing and recursively solving a model-based finite-horizon optimal control problem. To craft dynamical models for the temperature evolution in the rooms and the AHU effects on them, we made use of the Gaussian process framework described in Section~\ref{sec.gps}.
+In order to operate optimally the industrial cooling system while minimizing the operational costs, we opted for designing and recursively solving a model-based finite-horizon optimal control problem. To craft dynamical models for the temperature evolution in the rooms and the \ac{ahu} effects on them, we made use of the Gaussian process framework described in Section~\ref{sec.gps}.
 %ional to the angular position. For this reason, we decided to adopt a flexible class of statistical models to tackle the modeling problem while requiring as little expert knowledge as possible. Their main advantage being that this class not only predicts the expected system behavior, but also quantifies the uncertainty associated with its predictions, hence allowing for a more robust, risk-aware operation.
 
 \subsection{Data collection, model training and testing}
@@ -146,18 +146,18 @@ In order to operate optimally the industrial cooling system while minimizing the
 
 Aiming at capturing different weather conditions and a reasonable number of chiller states, a representative dataset was gathered from August to November 2021. The batch consisted of 22'455 points sampled at $T_\text{samp} = 2\,$ mins and comprised closed-loop operation with PI and rule-based controllers (RBCs), as well as a variety of open-loop excitation signals such as ramps and uniformly random inputs. The latter signals were mainly tested during weekends and Holidays to avoid disturbing occupants. After examining the obtained curves, we concluded that a control period of 10 mins would be a good compromise between operating the cooling system effectively and not oversampling the temperatures -- given that our model complexity grows with the size of the dataset, the latter aspect was rather important. The dataset was then downsampled by a factor of 5 times, resulting in 4'491 points, which corresponds to 748 hours. 
 
-A meticulous post-processing step was necessary next to ensure that unreliable periods were discarded. We highlight that this was not simply a matter of finding spurious outliers, but of identifying complete periods of time when the plant was not operating normally due to, for instance, a chiller fault, an unannounced maintenance in an AHU or even the manual closing of some air dampers by a technician. This process was carried out by jointly studying the obtained curves with the help of the local maintenance team. Finally, missing entries in the time-series were imputed using a simple linear interpolation scheme. Thanks to the reliability of the sensor networks shown in Section~\ref{sec.building_and_hvac}, only a small percentage of entries was not present. With the right set of data at hand, we proceeded to define and train one GP model for each room. 
+A meticulous post-processing step was necessary next to ensure that unreliable periods were discarded. We highlight that this was not simply a matter of finding spurious outliers, but of identifying complete periods of time when the plant was not operating normally due to, for instance, a chiller fault, an unannounced maintenance in an \ac{ahu} or even the manual closing of some air dampers by a technician. This process was carried out by jointly studying the obtained curves with the help of the local maintenance team. Finally, missing entries in the time-series were imputed using a simple linear interpolation scheme. Thanks to the reliability of the sensor networks shown in Section~\ref{sec.building_and_hvac}, only a small percentage of entries was not present. With the right set of data at hand, we proceeded to define and train one GP model for each room. 
 
 \begin{table}
 	\small
 	\centering
-	\caption{The main physical quantities influencing the HVAC plant and the temperature dynamics inside the rooms.}
+	\caption{The main physical quantities influencing the \ac{hvac} plant and the temperature dynamics inside the rooms.}
 	\label{tab.controlInformation}
 	\begin{tabular}{l c c} 
 		\cmidrule[.15em](l{\tabcolsep}r{\tabcolsep}){1-3}
 		& Symbols & Description \\
 		\cmidrule[.15em](l{\tabcolsep}r{\tabcolsep}){1-3}
-		Inputs & $\theta_\text{1}$, $\theta_\text{2}$, $\theta_\text{3}$ & \makecell{Valve position of AHU 1, \\ AHU 2 and AHU 3} \\
+		Inputs & $\theta_\text{1}$, $\theta_\text{2}$, $\theta_\text{3}$ & \makecell{Valve position of \ac{ahu} 1, \\ \ac{ahu} 2 and \ac{ahu} 3} \\
 		\cmidrule[.05em](l{\tabcolsep}r{\tabcolsep}){1-3}
 		Outputs & $T_\text{1}$, $T_\text{2}$, $T_\text{3}$ & \makecell{Temperatures within zone 1,  \\ zone 2 and zone 3} \\
 		\cmidrule[.05em](l{\tabcolsep}r{\tabcolsep}){1-3}
@@ -193,7 +193,7 @@ The process of designing GP models can be summarized in three steps: select suit
 \end{equation}
 where $x_i$ is the $i$th component of the feature vector $x$. In \eqref{eq.SEARD}, $\sigma$ is the so called vertical scale hyperparameter and $\ell_i$ are the horizontal scale (a.k.a. lengthscale) hyperparameters. However, relying solely on \eqref{eq.SEARD} can be dangerous as the resulting GP model would not extrapolate well. For this reason, a linear mean function $m(x) = Ax + b$ was also employed, causing the Gaussian process to behave linearly when far away from the training data. As for optimizing the hyperparameters we made use of the log-marginal likelihood objective and the Broyden–Fletcher–Goldfarb–Shanno (BFGS) first-order algorithm. The development was carried out in \texttt{Python} with the aid of the \texttt{GPflow2} \citep{matthews2017gpflow} and the \texttt{SciPy} \citep{virtanen2020scipy} packages.
 
-To model the temperature dynamics in the rooms, an auto-regressive structure was preferred over a state-space one (see discussion in Section~\ref{sec.gps}). In other words, future predictions of a signal depend on the current and past values of itself as well as on current and past values of other relevant quantities. Since there were three temperatures to predict, three distinct GPs were trained and, to avoid augmenting the Gaussian process with unnecessary features, we made use of domain knowledge. Rooms that are not neighbors do not directly influence each other's temperatures; similarly, changing the valve position of AHU~1 has no effect on any temperature besides $T_1$. Initially, all exogenous signals $T_\text{sup}$, $T_\text{out}$ and $R_\text{sol}$ had been included into all models to boost their prediction capabilities. Nevertheless, we later realized that $R_\text{sol}$ was a significant covariate only for $T_3$. Field tests also unveiled a high correlation between the MPC computation times over the day and the solar radiation curve. Since having consistent rather than fluctuating solve times was a project requirement, we decided not to employ $R_\text{sol}$ as a feature in any GP. The definitive set of features and signal delays is reported in Table~\ref{tab.features}. Finally, by using the mean functions \eqref{eq.GPmodels} to evolve the temperature dynamics, we arrive at the final models
+To model the temperature dynamics in the rooms, an auto-regressive structure was preferred over a state-space one (see discussion in Section~\ref{sec.gps}). In other words, future predictions of a signal depend on the current and past values of itself as well as on current and past values of other relevant quantities. Since there were three temperatures to predict, three distinct GPs were trained and, to avoid augmenting the Gaussian process with unnecessary features, we made use of domain knowledge. Rooms that are not neighbors do not directly influence each other's temperatures; similarly, changing the valve position of \ac{ahu}~1 has no effect on any temperature besides $T_1$. Initially, all exogenous signals $T_\text{sup}$, $T_\text{out}$ and $R_\text{sol}$ had been included into all models to boost their prediction capabilities. Nevertheless, we later realized that $R_\text{sol}$ was a significant covariate only for $T_3$. Field tests also unveiled a high correlation between the MPC computation times over the day and the solar radiation curve. Since having consistent rather than fluctuating solve times was a project requirement, we decided not to employ $R_\text{sol}$ as a feature in any GP. The definitive set of features and signal delays is reported in Table~\ref{tab.features}. Finally, by using the mean functions \eqref{eq.GPmodels} to evolve the temperature dynamics, we arrive at the final models
 \begin{subequations}
 	\begin{align}
 		T_{1,t+1} &= \mu_{1}(T_{1,t}, T_{1,t-1}, T_{2,t}, \theta_{1,t},T_{\text{sup},t},T_{\text{out},t}) \\
@@ -233,7 +233,7 @@ Inspecting Figure~\ref{fig.trainTestRes}, we see that the mean predictions mostl
 \subsection{Learning the chiller energy consumption}
 \label{sec:learningChiller}
 
-The problem of building a meaningful objective to minimize the system energy consumption was tackled with the two-step method described next. The first goal was to reconstruct the chiller refrigeration curve from historical data, more specifically, from the volumetric air-flow rates along with the outdoor temperature and the supplied air temperatures. Based on these quantities, the thermal power delivered by the chiller was inferred. Next, we used as features the outdoor temperature $T_\text{out}$ and the sum of the valve positions $\Theta = \theta_1 + \theta_2 + \theta_3$, the latter correlating with the water flow through the AHU coils (see Section~\ref{sec.controlProb}). A representative dataset was gathered over a period of 203 hours, which encompassed both random open-loop excitation and closed-loop operation. During this period, the AHU valves ranged from being completely open to being fully closed, and the ambient temperature varied from 15 to 40 degrees Celsius. The data distribution can be seen in Figure~\ref{fig.thermalAndElectrical}. We remark that the portion of the domain where the outdoor temperature is high and the total valve openings are low is not populated with samples due to operational constraints of the system, a common issue in HVAC control. The last step was to augment the batch with a grid of $T_\text{out}$ values paired with $\Theta=0\,$degs and $0\,$kW labels to represent the zero water-flow regime.
+The problem of building a meaningful objective to minimize the system energy consumption was tackled with the two-step method described next. The first goal was to reconstruct the chiller refrigeration curve from historical data, more specifically, from the volumetric air-flow rates along with the outdoor temperature and the supplied air temperatures. Based on these quantities, the thermal power delivered by the chiller was inferred. Next, we used as features the outdoor temperature $T_\text{out}$ and the sum of the valve positions $\Theta = \theta_1 + \theta_2 + \theta_3$, the latter correlating with the water flow through the \ac{ahu} coils (see Section~\ref{sec.controlProb}). A representative dataset was gathered over a period of 203 hours, which encompassed both random open-loop excitation and closed-loop operation. During this period, the \ac{ahu} valves ranged from being completely open to being fully closed, and the ambient temperature varied from 15 to 40 degrees Celsius. The data distribution can be seen in Figure~\ref{fig.thermalAndElectrical}. We remark that the portion of the domain where the outdoor temperature is high and the total valve openings are low is not populated with samples due to operational constraints of the system, a common issue in \ac{hvac} control. The last step was to augment the batch with a grid of $T_\text{out}$ values paired with $\Theta=0\,$degs and $0\,$kW labels to represent the zero water-flow regime.
 
 \begin{figure*}[!t]
 	\centering
@@ -305,7 +305,7 @@ The previously described Gaussian process-based MPC formulation was deployed on 
 \begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.7\linewidth]{../images/chap3_expres.pdf} 
-	\caption{MPC experimental results over four days: indoor temperature, valve position and uncertainty estimate associated with each room (top three plots); outdoor temperature, solar radiation and AHUs supply water temperature (bottom three plots). The system was sampled and controlled with a periodicity of 10 minutes.}
+	\caption{MPC experimental results over four days: indoor temperature, valve position and uncertainty estimate associated with each room (top three plots); outdoor temperature, solar radiation and \acp{ahu} supply water temperature (bottom three plots). The system was sampled and controlled with a periodicity of 10 minutes.}
 	\label{fig.prettyCool}
 \end{figure}	
 \end{landscape}
@@ -315,7 +315,7 @@ Consider first the day, November 10, and note the relatively high room temperatu
 
 The two days that followed, November 12 and 13, were less warm and, as a result, the MPC controller successfully modulated the valves to guarantee constraint satisfaction. From the plots, one can notice how $\theta_1$, $\theta_2$ and $\theta_3$ assumed  approximately constant intermediate values (around 60 degrees) during the evenings, and were more aggressively modulated on working hours. We believe this pattern to be due to the economic objective shown in Figure~\ref{fig.thermalAndElectrical}.
 
-Lastly, we focus on the data from November 13, where it is possible to see a sudden peak in the indoor temperatures and in $T_{\text{sup}}$ around midnight. This was caused by a momentary halt in the water pumps responsible for the chilled water circuit, an event that could be regarded as a fault from a control system perspective. During this period, as there was no water circulation through the AHU cooling coils, there was also no refrigeration and the indoor spaces received warm air since the fans were kept on. As soon as the pumps were reactivated, the chiller immediately lowered the supply water temperature and normal operation was restored. During daytime, the indoor climate was kept within the desired limits despite the valves staying saturated at their low values, even at noon. The fact that almost no additional actuation was needed is due to that day being a Saturday, when no operations are scheduled for and the three doors present in the environment are minimally opened and closed. This showcases how strong the internal heat gains and unmeasured disturbances normally are.
+Lastly, we focus on the data from November 13, where it is possible to see a sudden peak in the indoor temperatures and in $T_{\text{sup}}$ around midnight. This was caused by a momentary halt in the water pumps responsible for the chilled water circuit, an event that could be regarded as a fault from a control system perspective. During this period, as there was no water circulation through the \ac{ahu} cooling coils, there was also no refrigeration and the indoor spaces received warm air since the fans were kept on. As soon as the pumps were reactivated, the chiller immediately lowered the supply water temperature and normal operation was restored. During daytime, the indoor climate was kept within the desired limits despite the valves staying saturated at their low values, even at noon. The fact that almost no additional actuation was needed is due to that day being a Saturday, when no operations are scheduled for and the three doors present in the environment are minimally opened and closed. This showcases how strong the internal heat gains and unmeasured disturbances normally are.
 
 To assess the efficiency gains as well as the thermal performance of the deployed strategy, MPC was compared to alternative algorithms, all subject to exactly the same environmental conditions by means of simulations. We underline that this simulation model was calibrated on data that was \textit{not} included in the GPs training set, thus putting to test the MPC prediction capabilities. The disturbance signals $T_\text{out}$, $T_\text{sup}$ and $R_\text{sol}$ from November 10 were employed, and the indoor temperatures of the three rooms were uniformly initialized at values ranging from $17$ to $21$ degrees Celsius. The outdoor temperature profile was processed to yield three different weather scenarios: hot weather, which was exactly the same $T_\text{out}$ curve seen in Figure~\ref{fig.prettyCool}; warm weather, a $-2$°C shifted version of it, peaking at 33°C around noon; and mild weather, a $-5$°C shifted version of it, peaking at 30°C. Besides the MPC algorithm \eqref{eq.optControlProb}, the following were also tested:
 \begin{itemize}
@@ -337,22 +337,22 @@ To assess the efficiency gains as well as the thermal performance of the deploye
 	\label{fig.powerRes}
 \end{figure*}
 
-The REF strategy described above was conceived and tested precisely gauge the energy saving potential of the hospital HVAC plant. This algorithm, thanks to the way it was designed with a perfect internal model and perfect forecast of the outdoor temperature and supply water temperatures, will indicate what can be achieved realistically.
-%In order to gauge the energy saving potential of the HVAC plant, we executed the REF strategy described above. This algorithm can reach significant efficiency gains while guaranteeing thermal comfort since it exploits a perfect internal model as well as perfect forecasts of the outdoor and supply water temperatures.
+The REF strategy described above was conceived and tested precisely gauge the energy saving potential of the hospital \ac{hvac} plant. This algorithm, thanks to the way it was designed with a perfect internal model and perfect forecast of the outdoor temperature and supply water temperatures, will indicate what can be achieved realistically.
+%In order to gauge the energy saving potential of the \ac{hvac} plant, we executed the REF strategy described above. This algorithm can reach significant efficiency gains while guaranteeing thermal comfort since it exploits a perfect internal model as well as perfect forecasts of the outdoor and supply water temperatures.
 
 The obtained normalized energy consumption results and average room thermal comfort violations are shown in Figure~\ref{fig.powerRes}. Since the non-linear chiller curves described in Section~\ref{sec:learningChiller} were employed to measure the energy consumption, the reader is reminded that there is a non-trivial relationship between the weather conditions and indoor temperatures, and the final consumed energy. This aspect is due to the nature of the chiller and not the use of any particular control technique. As a last note, one specific energy normalization factor was used for each weather scenario shown in Figure~\ref{fig.powerRes} to enhance clarity.
 
 Glancing at the mild and warm weather plots, one notices how the REF and MPC data tended to be close together, and relatively far from the PI, ON/OFF and AVG clusters. Moreover, the REF and MPC points were also mostly to the left side and vertically below the other data given the same indoor temperature conditions--thus confirming their superior performance in terms of energy efficiency and indoor climate regulation. The ON/OFF and PI controllers yielded overall similar numerical results and, surprisingly, were outperformed by the AVG scheme under mild weather and starting indoor temperatures of $17\,$°C and $19\,$°C. AVG nevertheless performed poorly under warm weather and $21\,$°C, and hot weather in general. All in all, the predictive control strategies MPC and REF yielded the best results in the mild and warm weather cases, whereas the separation among them and the other techniques became less evident under hot weather, indicating a less important advantage over classical control.
 
-By analyzing the horizontal scales and contrasting REF to PI, ON/OFF and AVG, one concludes that this particular HVAC plant could have its efficiency boosted by approximately 2.5\%, 4\% and 5\% respectively in the mild, warm and hot weather scenarios. Notice how, as opposed to studies such as \cite{bunning2020experimental}, these numbers refer to the electrical energy associated with a chiller, and not to a cumulative thermal energy. Moreover, as the hospital was not subject to time-varying electricity prices, the contrast among control strategies was not as stark as for instance the one reported in \cite{joe2022investigation}. The proposed MPC strategy \eqref{eq.optControlProb} attained results close to the aforementioned maximum percentages. Quantitatively, MPC lead to a maximum energy efficiency improvement of 2.29\%, 3.13\% and 4.76\% respectively in mild, warm and hot weather, with respect to the PI and ON/OFF counterparts.
+By analyzing the horizontal scales and contrasting REF to PI, ON/OFF and AVG, one concludes that this particular \ac{hvac} plant could have its efficiency boosted by approximately 2.5\%, 4\% and 5\% respectively in the mild, warm and hot weather scenarios. Notice how, as opposed to studies such as \cite{bunning2020experimental}, these numbers refer to the electrical energy associated with a chiller, and not to a cumulative thermal energy. Moreover, as the hospital was not subject to time-varying electricity prices, the contrast among control strategies was not as stark as for instance the one reported in \cite{joe2022investigation}. The proposed MPC strategy \eqref{eq.optControlProb} attained results close to the aforementioned maximum percentages. Quantitatively, MPC lead to a maximum energy efficiency improvement of 2.29\%, 3.13\% and 4.76\% respectively in mild, warm and hot weather, with respect to the PI and ON/OFF counterparts.
 
 \section{Conclusions and outlook}
 
 The practical investigation presented in this chapter revolved around the use of Gaussian process models paired with MPC to autonomously control the industrial cooling system of a hospital building. The study was complex in comparison with many works found in the literature: it involved three thermal zones, multiple subsystems, two distinct sensor networks, four strong exogenous disturbances, and the direct control of low-level elements. From a computational viewpoint, expensive non-parametric models were used along with a non-convex MPC formulation, both in the cost and in the constraints, which brought about numerical challenges. All things considered, the chosen approach was able to guarantee the indoor comfort whenever enough actuation power was available, while also delivering superior energy performance when compared to alternative strategies.
 
-During the course of the project, a large portion of time was dedicated to studying the building and the AHUs, deciding what signals to measure, and setting up the necessary hardware. The second most time-consuming task was certainly building a functional data ingestion pipeline for the GPs: applying the necessary filters, detecting non-reliable periods, and crafting the feature vectors by delaying the time-series and patching multiple experiments together. We therefore believe that the control community could greatly benefit from a reliable toolbox to design and test GP autoregressive models with ease, which would certainly further increase the popularity of this technique. 
+During the course of the project, a large portion of time was dedicated to studying the building and the \acp{ahu}, deciding what signals to measure, and setting up the necessary hardware. The second most time-consuming task was certainly building a functional data ingestion pipeline for the GPs: applying the necessary filters, detecting non-reliable periods, and crafting the feature vectors by delaying the time-series and patching multiple experiments together. We therefore believe that the control community could greatly benefit from a reliable toolbox to design and test GP autoregressive models with ease, which would certainly further increase the popularity of this technique. 
 
-With regard to possible future investigations, we consider exploring sparse Gaussian processes based on pseudo-inputs \citep{bauer2016understanding} to lower the computational burden of the MPC controller and allow for longer prediction horizons. Taking a step back, it would also be interesting to experimentally investigate with different combinations of models (not necessarily Gaussian processes) and training objectives to find a pair that is able to automatically reject spurious data periods, not only isolated points, and dispense with the need of a meticulous pre-processing stage. Indeed, being robust to an abnormal period of operation at training time could alleviate the workload of field engineers and help fulfill the promising an effortless modeling phase. In our view, parametric techniques such as neural networks are less sensitive as their internal constants are adjusted gradually by the data, whereas non-parametric techniques absorb the whole dataset and make use of it during inference. That said, perhaps additional (unobserved) covariates could be used to explain an abnormal trajectory, essentially acting as a disturbance model. Finally, from an HVAC systems perspective, more encompassing investigations could include the control of additional variables, e.g. the air flow delivered to the rooms, as well as the regulation of physical quantities other than the temperatures such as the indoor spaces humidity levels.
+With regard to possible future investigations, we consider exploring sparse Gaussian processes based on pseudo-inputs \citep{bauer2016understanding} to lower the computational burden of the MPC controller and allow for longer prediction horizons. Taking a step back, it would also be interesting to experimentally investigate with different combinations of models (not necessarily Gaussian processes) and training objectives to find a pair that is able to automatically reject spurious data periods, not only isolated points, and dispense with the need of a meticulous pre-processing stage. Indeed, being robust to an abnormal period of operation at training time could alleviate the workload of field engineers and help fulfill the promising an effortless modeling phase. In our view, parametric techniques such as neural networks are less sensitive as their internal constants are adjusted gradually by the data, whereas non-parametric techniques absorb the whole dataset and make use of it during inference. That said, perhaps additional (unobserved) covariates could be used to explain an abnormal trajectory, essentially acting as a disturbance model. Finally, from an \ac{hvac} systems perspective, more encompassing investigations could include the control of additional variables, e.g. the air flow delivered to the rooms, as well as the regulation of physical quantities other than the temperatures such as the indoor spaces humidity levels.
 
 %Possible future investigations:  models/training procedures that are less sensible to spurious data/periods. The use of sparse GPs and alternative numerical methods (SQP) to speed-up online computations.
 %A forced-air investigation where additional variables are controlled, e.g. the fans speed (variable-air volume) and the flow of chilled water, or with extra output variables, e.g. the humidity in each zone. Or having an electricity meter installed to precisely measure the demand and more exactly assess the economical advantages of the advanced control scheme, which would help motivate practitioners to make use of it.
